Fixed alignment issues in home page

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,16 @@
+html {
+  margin-top: 70px;
+  margin-right: 6%; 
+}
+
+@media only screen and (min-width: 600px) {
+  html {
+    margin-right: 2%; 
+    margin-left: 300px;
+  }
+}
+
 body {
-  margin: 0;
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
